# meshell

./: CMakeLists.txt  main.cpp  main1.cpp  meshell.cpp  meshell.h  mycp.cpp  mycp.h  mygrep.cpp  mygrep.h  myls.cpp  myls.h  mymkdir.cpp  mymkdir.h  mymv.cpp  mymv.h  myrm.cpp  myrm.h  utility.cpp  utility.h
